<resources>
    <string name="app_name">Lesson6</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name_of_note">Название заметки:</string>
    <string name="hint_context_of_note">Содержание заметки:</string>
    <string name="hint_date_of_note">Дата ввода:</string>
    <string name="hint_mark_of_note">Особая отметка:</string>
    <string name="save">Сохранить</string>
    <string name="menu_about_app">О приложении Notebook</string>
    <string name="menu_gide_of_app">Справка</string>
</resources>