<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:orientation="vertical"
    tools:contentDescription="OneNoteFragment">

    <EditText
        android:id="@+id/name_of_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name_of_note" />

    <EditText
        android:id="@+id/text_of_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_context_of_note" />

    <EditText
        android:id="@+id/date_of_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_date_of_note" />

    <EditText
        android:id="@+id/mark_of_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_mark_of_note" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>